force-app/main/default/objects/Order_Item__c/fields/Bill_Frec__c.field-meta.xml
<CustomField>
    <fullName>Bill_Frec__c</fullName>
    <label>Bill Frec</label>
    <length>30</length>
    <type>Text</type>
</CustomField>