force-app/main/default/objects/Order_Item__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>