force-app/main/default/objects/Order_Item__c/fields/City_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>City_Tax_Amount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>City Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>