force-app/main/default/objects/Order_Item__c/fields/Day_SD__c.field-meta.xml
<CustomField>
    <fullName>Day_SD__c</fullName>
    <label>Day SD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>