force-app/main/default/objects/Order_Item__c/fields/Month_SD__c.field-meta.xml
<CustomField>
    <fullName>Month_SD__c</fullName>
    <label>Month SD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>