force-app/main/default/objects/Order_Item__c/fields/Monthly_Investment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Investment__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Monthly Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>