force-app/main/default/objects/Order_Item__c/fields/Product_HS__c.field-meta.xml
<CustomField>
    <fullName>Product_HS__c</fullName>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product must be active</errorMessage>
        <filterItems>
            <field>Product__c.active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>