force-app/main/default/objects/Order_Item__c/fields/Total_Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Installation_Cost__c</fullName>
    <formula>Quantity__c *  Product_HS__r.Installation_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>