force-app/main/default/objects/Order_Item__c/fields/Year_SD__c.field-meta.xml
<CustomField>
    <fullName>Year_SD__c</fullName>
    <label>Year SD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>